crates/sim-citizen-derive/tests/ui/fail/non_citizen_unsupported_key.rs
use sim_citizen_derive::non_citizen;

#[non_citizen(
    reason = "runtime-owned state",
    kind = "live-handle",
    descriptor = "example/live-handle",
    extra = "unexpected"
)]
struct UnsupportedKey;

fn main() {}
