crates/sim-citizen-derive/tests/ui/fail/non_citizen_unsupported_key.stderr
error: unsupported non_citizen attribute
 --> tests/ui/fail/non_citizen_unsupported_key.rs:7:5
  |
7 |     extra = "unexpected"
  |     ^^^^^
